2006-05-17  Martin Baulig  <martin@ximian.com>

	* pthread-support.c, pthread-stop-world.c: Put the debugger stuff
	inside a `#if LIBGC_MONO_DEBUGGER_SUPPORTED' conditional.

2006-05-17  Martin Baulig  <martin@ximian.com>

	Fix a weird race condition which prevented XSP from working inside
	the debugger - see doc/debugger-issues.txt for details.

	* include/gc.h: Moved the "libgc-mono-debugger.h" #include down
	after the gc_pthread_redirects.h one.

	* include/libgc-mono-debugger.h
	(GCThreadFunctions): Added `thread_created' and `thread_exited'.
	(GC_mono_debugger_add_all_threads): New function prototype.

	* pthread_stop_world.c (gc_thread_vtable): Allow the vtable and
	any function in it be NULL; use NULL as the default vtable.
	(GC_mono_debugger_add_all_threads): New public function.

	* pthread_support.c (GC_new_thread): Use calloc() instead of
	GC_INTERNAL_MALLOC() to allocate the `GC_thread' structure.
	(GC_delete_thread): Call `gc_thread_vtable->thread_exited()'.
	(GC_thr_init): Call `gc_thread_vtable->thread_created()'.
	(GC_start_routine_head): Likewise; use calloc() instead of
	GC_INTERNAL_MALLOC() to allocate the `start_info'.

2006-04-05  Zoltan Varga  <vargaz@gmail.com>

	* include/private/gcconfig.h (LINUX and SPARC): Applied patch from 
	David S. Miller <davem@davemloft.net>: Do not
       use _etest and GC_SysVGetDataStart() to figure out DATASTART.
       Instead use either SEARCH_FOR_DATA_START or __environ, based
       upon GLIBC version.

2006-03-25  Zoltan Varga  <vargaz@gmail.com>

	* configure.in: Applied patch from David S. Miller <davem@davemloft.net>: Fix support for sparc/linux.

Mon Mar 20 18:56:21 CET 2006 Paolo Molaro <lupus@ximian.com>

	* include/gc.h: enable pthread redirection on darwin, too.
	* include/gc_pthread_redirects.h: completed from Bryan Berg.

Thu Feb 9 16:20:55 CET 2006 Paolo Molaro <lupus@ximian.com>

	* os_dep.c, include/private/gcconfig.h, darwin_stop_world.c: