@@ -1,3 +1,9 @@
+2006-05-19  Martin Baulig  <martin@ximian.com>
+
+	* include/gc.h: Don't include "libgc-mono-debugger.h".
+
+	* pthread_support.c, pthread_stop_world.c: Include it here.
+
 2006-05-17  Martin Baulig  <martin@ximian.com>
 
 	* pthread-support.c, pthread-stop-world.c: Put the debugger stuff
